--- a/Frontend/scr/menu/menu.html
+++ b/Frontend/scr/menu/menu.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./menu.css">
 </head>
 
 <body>
@@ -20,24 +22,7 @@
     <hr>
     <ul class="list"></ul>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', async () => {
-            try {
-                const response = await fetch('http://localhost:8080/http://localhost:3030/getAll');
-                let users = await response.json();
-                users = users.data;
-                const userList = document.querySelector('.list');
-                users.forEach(user => {
-                    const listItem = document.createElement('li');
-                    listItem.textContent = `ID: ${user.id}, Username: ${user.username}, Email: ${user.email}`;
-                    userList.appendChild(listItem);
-                });
-
-            } catch (error) {
-                console.error('Ocorreu um erro:', error);
-            }
-        });
-    </script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
