--- a/Frontend/scr/menu/menu.html
+++ b/Frontend/scr/menu/menu.html
@@ -13,7 +13,7 @@
 <body>
     <ul class="options">
         <li>
-            <a href="../index.html">logout</a>
+            <a href="../index.html">Logout</a>
         </li>        
         <li>
             <a href="../user/user.html">Cadastrar usuário</a>
@@ -22,7 +22,9 @@
     <hr>
     <ul class="list"></ul>
 
+    <script src="../api.js" type="module"></script>
     <script src="./script.js"></script>
+    
 </body>
 
 </html>
