--- a/Frontend/scr/menu/menu.html
+++ b/Frontend/scr/menu/menu.html
@@ -19,10 +19,13 @@
             <a href="../user/user.html">Cadastrar usuário</a>
         </li>
     </ul>
+    <label for="filter">Filtro:</label>
+    <input type="text">
+    <button class="btn btn-primary">Buscar</button>
     <hr>
-    <ul class="list"></ul>
-
-    <script src="../api.js" type="module"></script>
+    <fieldset>
+        <ul class="list"></ul>
+    </fieldset>
     <script src="./script.js"></script>
     
 </body>
