--- a/Frontend/scr/menu/menu.html
+++ b/Frontend/scr/menu/menu.html
@@ -20,12 +20,11 @@
         </li>
     </ul>
     <label for="filter">Filtro:</label>
-    <input type="text">
-    <button class="btn btn-primary">Buscar</button>
+    <input type="text" name="filter">
+    <button class="btn btn-primary" onclick="filterList()">Buscar</button>
     <hr>
-    <fieldset>
-        <ul class="list"></ul>
-    </fieldset>
+    <ul class="list"></ul>
+    
     <script src="./script.js"></script>
     
 </body>
