--- a/Frontend/scr/menu/menu.html
+++ b/Frontend/scr/menu/menu.html
@@ -21,7 +21,7 @@
     </ul>
     <label for="filter">Filtro:</label>
     <input type="text" name="filter">
-    <button class="btn btn-primary" onclick="filterList()">Buscar</button>
+    <button class="btn-primary" onclick="filterList()">Buscar</button>
     <hr>
     <ul class="list"></ul>
     
